Revert clickable map icons